--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: David Edwards
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 exclude: [/CNAME, /README.md]
+timezone: America/Chicago
